# CreateCloud

./: .gitignore  ARCHITECTURE.md  README.md  local_test.py  pyproject.toml  s3_upload_test.py
infrastructure/: iam.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
src/crat8cloud/: __init__.py  cli.py  config.py
src/crat8cloud/cloud/: __init__.py  auth.py  s3.py
src/crat8cloud/core/: __init__.py  models.py  serato.py  sync.py  watcher.py
src/crat8cloud/ui/: __init__.py  menubar.py  window.py
src/cratecloud/: __init__.py  cli.py  config.py
src/cratecloud/cloud/: __init__.py  auth.py  s3.py
src/cratecloud/core/: __init__.py  models.py  serato.py  sync.py  watcher.py
src/cratecloud/ui/: __init__.py  menubar.py  window.py
tests/: __init__.py  test_config.py  test_models.py  test_serato.py
